--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -18,10 +18,14 @@
 </div>
 
 <%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
+  <div class="form-group">
+    <label for="message_name">名前：</label>
+    <!-- #2行から1行にした -->
+    <%= f.text_area :name, rows: "1", class: "form-control", placeholder: "お名前を入力" %>
+  </div>
+  <div class="form-group">
+    <label for="message_body">内容：</label>
+    <%= f.text_area :body, rows: "1", class: "form-control", placeholder: "メッセージ内容を入力" %>
+  </div>
   <%= f.submit class: "btn btn-sm btn-primary" %>
 <% end %>
