--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.label :name, "名前", class: "col-md-2 control-label" %>
     <div class="col-md-10">
       <!-- 1行にする -->
-      <%= f.text_area :name, rows: "1",  class: "form-control", placeholder: "お名前を入力" %>
+      <%= f.text_field :name, rows: "1",  class: "form-control", placeholder: "お名前を入力" %>
     </div>
   </div>
   
