--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -14,9 +14,13 @@
 
   <div class="form-group">
     <%= f.label :name, "名前", class: "col-md-2 control-label" %>
-    <div class="col-md-10">
+    <div class="col-md-6">
       <!-- 1行にする -->
-      <%= f.text_field :name, rows: "1",  class: "form-control", placeholder: "お名前を入力" %>
+      <%= f.text_field :name,  class: "form-control", placeholder: "お名前を入力" %>
+    </div>
+    <%= f.label :age, "年齢", class: "col-md-2 control-label" %>
+    <div class="col-md-2">
+      <%= f.text_field :age, class: "form-control",  placeholder: "年齢を入力" %>
     </div>
   </div>
   
